# src/domain/models/entities/user.ts
@@ -1,8 +1,10 @@
-/* 유저 모델 */
+import { UUID } from "crypto";
+
 export class User {
   constructor(
-    public id: number,
-    public nickname: string,
+    public id: UUID,
+    public name: string,
+    public tag: string,
     public email: string,
     public password: string,
     public createdAt: Date
